
New: Issue #1070: Added the system boot time and uptime to the XML interface. Thanks
to Lutz Mader.

New: Added support to add Monit to M/Monit hostgroup. Example:
 set mmonit
     https://monit:mypassword@mmonit.foo.bar:8443/collector
     hostgroup Oslo
     hostgroup "Mail servers"

New: Set the header X-Content-Type-Options to prevent MIME type sniffing. Thanks to Christian Goettsche.

Fixed: Issue #1082: Wrong error message for the uptime test. Thanks to Lutz Mader.

Fixed: Disable SSL session renegotiation in the Monit HTTP interface (CVE-2011-1473).

Fixed: Monit reported wrong number of CPUs in the VMWare virtual host in Debian 12.x

Fixed: Issue #1086: The HTTP protocol test may return false error "HTTP error: invalid chunk size"
if the HTTP response contained header with more then 511 bytes. We have increased the limit
to 8192 bytes per header and will report "response header exceeded maximum size" error if
the HTTP response contains longer header.

Fixed: When the monit ID is generated in first start and the system is shut down before the
file was stored to the filesystem, an empty monitid file may be created. Thanks to Alexander Dahl
for fix.

Fixed: The SSL connection can be sporadically interrupted.


Version 5.33.0

New: Added clickjacking protection headers to Monit HTTP GUI (SAMEORIGIN iframe is allowed).

Fixed: Issue #1035: If the start/stop/restart program statement contains the equal sign, which
is not followed by a space character, the configuration is not parsed correctly.

Fixed: Issue #1047: If the MariaDB server doesn't allow access to the host from which Monit test is running,
Monit reported "Invalid handshake packet sequence id -- not MySQL protocol".

Fixed: The "responsetime" option added to the ping test and fixed the port reponse time comparison.


Version 5.32.0

Fixed: Issue #1028: When the Monit statefile was removed, the "monit start <service>" action for